# qmckl_dgemm

./: .gitignore  .gitmodules  INSTALL.md  Makefile.am  README.md  bli_x86_asm_macros.h  build_dgemm.sh  build_gcc.sh  code_gen.py  configure.ac  gen_dims.py  kernel.c  kernel.h  kernel_avx2_16regs.c  kernel_avx2_16regs.h  kernel_avx2_8regs.c  kernel_sse2_8regs.c  main.c  utils.c  utils.h
code_gen/: code_gen.org
include/: qmckl_dgemm.h  qmckl_dgemm_private.h  utils.h
pkgconfig/: qmckldgemm.pc.in
scripts/: run_bench.sh  run_bench_avx2.sh  run_blas.sh
src/: kernel.c  kernel_avx2_16regs.c  kernel_avx2_16regs.h  kernel_avx2_32regs.c  kernel_avx2_32regs.h  kernel_avx2_8regs.c  kernel_avx2_8regs.h  kernel_sse2_16regs.c  kernel_sse2_16regs.h  kernel_sse2_8regs.c  kernel_sse2_8regs.h  main.c  main_c  qmckl_dgemm.c  qmckl_dgemm.h  qmckl_dgemm_f.f90  qmckl_dgemm_private.h  utils.c  utils.h
tests/: test.f90  test_main.c
